--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "grunt": "^1.0.1",
     "grunt-bower-concat": "^1.0.0",
     "grunt-contrib-handlebars": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^2.3.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-handlebars": "0.0.6",
     "jasmine": "^2.5.3"
   }
