--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "reset": "cp data/default.json data/todos.json"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "morgan": "~1.8.1",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.8",
+    "express": "^4.15.4",
+    "grunt-contrib-handlebars": "^1.0.0",
+    "handlebars": "^4.0.10",
+    "morgan": "^1.8.2",
     "nib": "^1.1.2",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2",
+    "nodemon": "^1.11.0",
+    "pug": "^2.0.0-rc.3",
+    "serve-favicon": "^2.4.3",
     "stylus": "^0.54.5",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-bower-concat": "^1.0.0",
-    "grunt-contrib-handlebars": "^1.0.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^2.3.0",
     "grunt-contrib-watch": "^1.0.0",
